# django-sbhtml

./: .gitignore  pyproject.toml
src/sbhtml/static/sbhtml/css/: styles.css
src/sbhtml/templates/sbhtml/: base.html
src/sbhtml/templates/sbhtml/includes/: topbar.html
